--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "wdio wdio.conf.js",
+    "test-all": "wdio wdio.conf.js",
     "test-login": "wdio wdio.conf.js --spec ./test/specs/login.spec.js",
-    "test-upload": "wdio wdio.conf.js --spec ./test/specs/upload.spec.js"
+    "test-upload": "wdio wdio.conf.js --spec ./test/specs/upload.spec.js",
+    "test-search": "wdio wdio.conf.js --spec ./test/specs/search.spec.js",
+    "generate-report": "allure generate ./allure-results --clean && allure open"
   },
   "keywords": [],
   "author": "",
@@ -16,13 +18,14 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@babel/register": "^7.10.1",
-    "@wdio/allure-reporter": "^6.1.14",
+    "@wdio/allure-reporter": "5.16.0",
     "@wdio/cli": "^6.1.16",
     "@wdio/local-runner": "^6.1.16",
     "@wdio/mocha-framework": "^6.1.14",
     "@wdio/selenium-standalone-service": "^6.1.14",
     "@wdio/spec-reporter": "^6.1.14",
     "@wdio/sync": "^6.1.14",
+    "chai": "^4.2.0",
     "selenium-standalone": "^6.17.0",
     "webdriverio": "^6.1.16"
   }
