--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,44 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.1.6
+#orbs:
+#  node: circleci/node@3.0.0
 jobs:
   build-and-test:
-    executor:
-      name: node/default
+    environment:
+      # Configure the JVM and Gradle to avoid OOM errors
+      _JAVA_OPTIONS: "-Xmx3g"
+      GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
+    docker: # run the steps with Docker
+      - image: circleci/openjdk:11.0.3-jdk-stretch
+      - image: circleci/node:10.13-stretch
+    working_directory: ~/giphy
     steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm run test-all
+      - checkout:
+          path: ~/giphy
+      - setup_remote_docker
+      - run:
+          name: Setup Browserstack credentials
+          command: |
+            echo 'export BROWSERSTACK_USERNAME="${BROWSERSTACK_USERNAME}"' >> $BASH_ENV
+            echo 'export BROWSERSTACK_KEY="${BROWSERSTACK_KEY}"' >> $BASH_ENV
+      - run:
+          name: npm install
+          command: npm install
+      - run:
+          name: Run tests
+          command: npm run test-all
+
+ #     - node/with-cache:
+ #         steps:
+ #           - run: npm install
+ #           - run: npm run test-all
 workflows:
     build-and-test:
       jobs:
-        - build-and-test
+        - build-and-test:
+            context: giphy
+            filters:
+              branches:
+                only: 
+                  - develop
+                  - master
+                  - circleci-project-setup
