--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
-#orbs:
-#  node: circleci/node@3.0.0
+orbs:
+  node: circleci/node@3.0.0
 jobs:
   build-and-test:
     environment:
@@ -9,7 +9,6 @@ jobs:
       GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
     docker: # run the steps with Docker
       - image: circleci/openjdk:11.0.3-jdk-stretch
-      - image: circleci/node:10.13-stretch
     working_directory: ~/giphy
     steps:
       - checkout:
@@ -20,11 +19,17 @@ jobs:
           command: |
             echo 'export BROWSERSTACK_USERNAME="${BROWSERSTACK_USERNAME}"' >> $BASH_ENV
             echo 'export BROWSERSTACK_KEY="${BROWSERSTACK_KEY}"' >> $BASH_ENV
+      - node/install:
+          install-npm: true
+          node-version: 12.16.3
+      - run: 
+          name: node version
+          command: node --version
       - run:
           name: npm install
           command: npm install
       - run:
-          name: Run tests
+          name: npm run tests
           command: npm run test-all
 
  #     - node/with-cache:
