--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,10 @@ node_modules/
 npm-debug.log*
 app/config/
 
-web/tests/errorShots/
-web/tests/testResults/
-web/tests/test/config.js
-web/tests/allure-report/
-web/tests/allure-results/
+errorShots
+testResults
+/allure-report/
+/allure-results/
 
 **/*.lerna_backup
 **/package-lock.json
