--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ jobs:
       _JAVA_OPTIONS: "-Xmx3g"
       GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
     docker: # run the steps with Docker
-#      - image: circleci/openjdk:11.0.3-jdk-stretch
-      - image: selenium/standalone-chrome:latest
+      - image: circleci/openjdk:11.0.3-jdk-stretch
+#      - image: selenium/standalone-chrome:latest
     working_directory: ~/giphy
     steps:
       - checkout:
@@ -21,9 +21,9 @@ jobs:
           command: |
             echo 'export BROWSERSTACK_USERNAME="${BROWSERSTACK_USERNAME}"' >> $BASH_ENV
             echo 'export BROWSERSTACK_KEY="${BROWSERSTACK_KEY}"' >> $BASH_ENV
-      - run:
-          name: install curl
-          command: sudo apt install curl
+#      - run:
+#          name: install curl
+#          command: sudo apt install curl
       - node/install:
           install-npm: true
           node-version: 12.16.3
